--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.11.5",
+    "@astrojs/partytown": "^1.0.1",
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.1",
     "@astrojs/vercel": "^2.3.3",
