--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.1",
     "@astrojs/vercel": "^2.3.3",
+    "@vercel/analytics": "^0.1.8",
     "astro": "^1.6.0",
     "astro-icon": "^0.8.0",
     "svelte": "^3.46.4"
